# fastapi-session

./: LICENSE  README.md  docker-compose.yml  pyproject.toml
examples/filesystem/: .env.example  app.py  main.py  settings.py
examples/redis/: .env.example  app.py  main.py  settings.py
fastapi_session/: __init__.py  constants.py  dependencies.py  enums.py  exceptions.py  managers.py  middlewares.py  session.py  sessions.py  settings.py  types.py  utils.py
fastapi_session/adapters/: fastapi.py
fastapi_session/backends/: __init__.py  database.py  fs.py  interfaces.py  redis.py
fastapi_session/encryptors/: __init__.py  aes.py  interfaces.py
fastapi_session/managers/: cookie.py  session.py
flaskapi_session/: __init__.py  backends.py  interfaces.py  managers.py  middlewares.py  session.py  settings.py
flaskapi_session/backends/: __init__.py  _mixins.py  fs.py  redis.py
flaskapi_session/managers/: __init__.py  cookie.py  mixins.py  session.py
tests/: conftest.py  factories.py  test_adapters.py  test_dependecies.py  test_fs_backend.py  test_managers.py  test_middlewares.py
tests/test_backends/: test_fs.py  test_redis.py
tests/test_sessions/: test_async.py  test_fs.py  test_redis.py
tests/test_utils/: test_backend.py  test_encryption.py
