[tool.poetry]
name = "fastapi_session"
version = "0.5.4"
description = "A fastapi library for managing session of different types"
authors = ["Maxim Yakovenko <mxyakovenko9@gmail.com>", "Zarlo <5899@zarlo.dev>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/TheLazzziest/fastapi_session"
documentation = ""
keywords = [
    "Asyncio",
    "FastAPI",
    "Session",
    "Cookie",
    "Secured"
]

[tool.poetry.dependencies]
python = "^3.8"
aiofiles = "^0.6.0"
portalocker = "^2.0.0"
aioredis = "^1.3.1"
fastapi = "^0.63.0"
itsdangerous = "^1.1.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
pytest-asyncio = "^0.14.0"
asynctempfile = "^0.5.0"
ipython = "^7.19.0"
black = {version = "^20.8b1", allow-prereleases = true}
hypothesis = "^5.47.0"
pytest-subtests = "^0.4.0"
databases = {extras = ["sqlite"], version = "^0.4.1"}
uvicorn = "^0.13.3"
httpx = "^0.16.1"
pytest-mock = "^3.5.1"

[tool.poetry.urls]
issues = "https://github.com/TheLazzziest/fastapi_session"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
