[tool.poetry]
name = "fastapi-session"
version = "0.8.4"
description = "A fastapi library for managing session of different types"
authors = ["Maxim Yakovenko <mxyakovenko9@gmail.com>", "Zarlo <5899@zarlo.dev>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/TheLazzziest/fastapi_session"
documentation = "https://github.com/TheLazzziest/fastapi_session"
keywords = [
    "Asyncio",
    "FastAPI",
    "Session",
    "Cookie",
    "Secured"
]

[tool.poetry.dependencies]
python = ">=3.8"
aiofiles = "~0.6"
portalocker = "~2.0"
aioredis = "~1.3"
fastapi = ">=0.63"
cryptography = "~3.4"
pendulum = "~2.1"
pycryptodomex = "~3.10"

[tool.poetry.dev-dependencies]
pytest = "~6.2"
pytest-asyncio = "~0.14"
asynctempfile = "~0.5.0"
ipython = "~7.19"
black = {version = "~20", allow-prereleases = true}
hypothesis = "~5.47"
pytest-subtests = "~0.4.0"
databases = {extras = ["sqlite"], version = "~0.4"}
uvicorn = "~0.13"
httpx = "~0.16.1"
pytest-mock = "~3.5.1"
requests = "~2.25.1"
asgi-lifespan = "~1.0.1"

[tool.poetry.urls]
issues = "https://github.com/TheLazzziest/fastapi-session/issues"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
